--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="audio_handle">音频处理</string>
     <string name="media_handle">音视频处理</string>
     <string name="video_handle">视频处理</string>
+    <string name="video_push">推流直播</string>
 
     <string name="media_mux">音视频合成</string>
     <string name="media_extra_audio">提取音频</string>
