--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
     <string name="audio_handle">音频处理</string>
     <string name="media_handle">音视频处理</string>
     <string name="video_handle">视频处理</string>
-    <string name="video_push">推流直播</string>
+    <string name="video_push">本地推流直播</string>
+    <string name="video_live">实时推流直播</string>
 
     <string name="media_mux">音视频合成</string>
     <string name="media_extra_audio">提取音频</string>
     <string name="media_extract_video">提取视频</string>
+    <string name="media_play">音视频播放</string>
 
     <string name="video_cut">视频剪切</string>
     <string name="video_concat">视频拼接</string>
