--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="audio_mix">音频混合</string>
     <string name="audio_play">音频解码AudioTrack播放</string>
     <string name="audio_opensl">音频解码OpenSL播放</string>
+    <string name="audio_encode">音频编码</string>
 
     <string name="audio_handle">音频处理</string>
     <string name="media_handle">音视频处理</string>
