视频反序倒播
视频反序倒播（纯视频）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="video_slow">慢放</string>
     <string name="video_fast">快进</string>
     <string name="video_multi">画面拼接</string>
+    <string name="video_reverse">视频倒播</string>
 
     <string name="swap">切换</string>
     <string name="start">开始</string>
