--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,7 @@
     <string name="video_balance">色彩平衡</string>
     <string name="video_sharp">锐化</string>
 
+    <string name="select_file">选择文件</string>
+    <string name="please_select">请选择正确文件</string>
+
 </resources>
