--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="please_select">请选择正确文件</string>
     <string name="file_not_found">文件不存在</string>
     <string name="please_click_select">请点击右上角菜单选择文件</string>
+    <string name="wrong_audio_format">非音频文件</string>
+    <string name="wrong_video_format">非视频文件</string>
 
 </resources>
