拖动视频小图预览
拖动视频小图预览

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="video_denoise">视频降噪</string>
     <string name="video_image">视频转图片</string>
     <string name="video_pip">视频画中画</string>
-    <string name="video_floating">悬浮窗播放</string>
+    <string name="video_preview">播放预览</string>
 
     <string name="swap">切换</string>
     <string name="start">开始</string>
