--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,6 +42,7 @@
     <string name="video_pip">Video Pip</string>
     <string name="video_preview">Video preview</string>
     <string name="video_moov">MOOV move ahead</string>
+    <string name="video_speed">Playing speed</string>
 
     <string name="swap">Swap</string>
     <string name="start">Start</string>
