--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="video_pip">视频画中画</string>
     <string name="video_preview">播放预览</string>
     <string name="video_moov">MOOV前移</string>
+    <string name="video_speed">播放倍率</string>
 
     <string name="swap">切换</string>
     <string name="start">开始</string>
