--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,12 +76,12 @@
 
     <string name="filter_sketch">素描</string>
     <string name="filter_distinct">鲜明</string>
-    <string name="filter_warming">暖蓝</string>
     <string name="filter_edge">边缘</string>
     <string name="filter_division">九宫格</string>
     <string name="filter_equalize">均衡</string>
     <string name="filter_rectangle">矩形</string>
-    <string name="filter_flip">翻转</string>
+    <string name="filter_flip">镜像</string>
+    <string name="filter_rotate">旋转</string>
     <string name="filter_sharpening">锐化</string>
 
 </resources>
