--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="media_extract_video">提取视频</string>
     <string name="media_play">音视频播放</string>
     <string name="media_probe">解析多媒体格式</string>
+    <string name="media_dubbing">配音</string>
 
     <string name="video_cut">视频剪切</string>
     <string name="video_concat">视频拼接</string>
