--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="video_moov">MOOV前移</string>
     <string name="video_speed">播放倍率</string>
     <string name="video_flv">FLV索引</string>
+    <string name="video_thumbnail">插入封面</string>
 
     <string name="swap">切换</string>
     <string name="start">开始</string>
