--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,6 +10,7 @@
     <string name="pcm_concat">PCM concat</string>
     <string name="audio_speed">Audio speed</string>
     <string name="audio_echo">Echo effect</string>
+    <string name="audio_tremolo">Tremolo effect</string>
     <string name="audio_effect">Audio effect</string>
     <string name="audio_equalizer">Audio equalizer:</string>
     <string name="audio_style">Audio style:</string>
