--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="pcm_concat">PCM合并</string>
     <string name="audio_speed">音频速度</string>
     <string name="audio_echo">空灵效果</string>
+    <string name="audio_tremolo">惊悚效果</string>
     <string name="audio_effect">音乐均衡器</string>
     <string name="audio_equalizer">均衡器:</string>
     <string name="audio_style">风格:</string>
