add audio denoise effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="audio_transform">音频转码</string>
     <string name="audio_cut">音频剪切</string>
     <string name="audio_concat">音频合并</string>
-    <string name="audio_mix">音频混合</string>
+    <string name="audio_mix">音乐混音</string>
     <string name="audio_play">音频解码AudioTrack播放</string>
     <string name="audio_opensl">音频解码OpenSL播放</string>
     <string name="audio_encode">PCM编码</string>
@@ -11,6 +11,7 @@
     <string name="audio_speed">音频速度</string>
     <string name="audio_echo">空灵效果</string>
     <string name="audio_tremolo">惊悚效果</string>
+    <string name="audio_denoise">音频降噪</string>
     <string name="audio_effect">音乐均衡器</string>
     <string name="audio_equalizer">均衡器:</string>
     <string name="audio_style">风格:</string>
