--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,6 +12,7 @@
     <string name="audio_echo">Echo effect</string>
     <string name="audio_tremolo">Tremolo effect</string>
     <string name="audio_denoise">Audio denoise</string>
+    <string name="audio_silence">Silence detect</string>
     <string name="audio_effect">Audio effect</string>
     <string name="audio_equalizer">Audio equalizer:</string>
     <string name="audio_style">Audio style:</string>
