--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,6 +13,8 @@
     <string name="audio_tremolo">Tremolo effect</string>
     <string name="audio_denoise">Audio denoise</string>
     <string name="audio_silence">Silence detect</string>
+    <string name="audio_volume">Audio volume</string>
+    <string name="audio_add_equalizer">Add equalizer</string>
     <string name="audio_effect">Audio effect</string>
     <string name="audio_equalizer">Audio equalizer:</string>
     <string name="audio_style">Audio style:</string>
