--- a/Live/src/main/res/values/strings.xml
+++ b/Live/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="stop">停止</string>
     <string name="mute">静音</string>
     <string name="voice">取消静音</string>
+    <string name="take_photo">拍照</string>
 
     <string name="effect_beauty">美颜</string>
     <string name="effect_cool">冷酷</string>
