change video from rgb to gray

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -67,6 +67,7 @@
     <string name="video_thumbnail">Insert thumbnail</string>
     <string name="video_subtitle">add subtitle</string>
     <string name="video_gop">KeyFrame interval</string>
+    <string name="video_gray">Gray video</string>
 
     <string name="swap">Swap</string>
     <string name="start">Start</string>
