zoom photo to video

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,7 +65,7 @@
     <string name="video_speed">Playing speed</string>
     <string name="video_thumbnail">Insert thumbnail</string>
     <string name="video_subtitle">add subtitle</string>
-    <string name="video_gop">KeyFrame interval</string>
+    <string name="video_zoom">Zoom video</string>
     <string name="video_gray">Gray video</string>
 
     <string name="swap">Swap</string>
