--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="video_speed">播放倍率</string>
     <string name="video_thumbnail">插入封面</string>
     <string name="video_subtitle">添加字幕</string>
-    <string name="video_gop">关键帧间隔</string>
+    <string name="video_zoom">图片缩放</string>
     <string name="video_gray">黑白视频</string>
 
     <string name="swap">切换</string>
