--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,8 @@
     <string name="media_extra_audio">提取音频</string>
     <string name="media_extract_video">提取视频</string>
     <string name="media_play">音视频播放</string>
-    <string name="media_probe">解析多媒体格式</string>
+    <string name="media_probe">probe多媒体信息</string>
+    <string name="media_retrieve">retrieve多媒体信息</string>
     <string name="media_dubbing">配音</string>
 
     <string name="video_cut">视频剪切</string>
