--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FFmpegAndroid</string>
+    <string name="compose">compose</string>
     <string name="audio_transform">Audio transform</string>
     <string name="audio_cut">Audio cut</string>
     <string name="audio_concat">Audio concat</string>
