--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,6 +17,7 @@
     <string name="audio_volume">Audio volume</string>
     <string name="audio_add_equalizer">Add equalizer</string>
     <string name="audio_effect">Audio effect</string>
+    <string name="encoder_list">Encoder list</string>
     <string name="audio_equalizer">Audio equalizer:</string>
     <string name="audio_style">Audio style:</string>
     <string name="audio_reverb">Audio reverb:</string>
