--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,8 @@
     <string name="video_extract_frame">视频抽帧</string>
     <string name="video_part_zoom">视频局部放大</string>
     <string name="video_play">视频播放</string>
-    <string name="video_filter">滤镜特效</string>
+    <string name="video_filter">FFmpeg滤镜</string>
+    <string name="camera_filter">Camera滤镜</string>
     <string name="video_slow">慢放</string>
     <string name="video_fast">快进</string>
     <string name="video_multi">画面拼接</string>
