--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,8 @@
     <string name="filter_rotate">旋转</string>
     <string name="filter_sharpening">锐化</string>
 
+    <string name="camera_filter_none">正常</string>
+    <string name="camera_filter_crayon">蜡笔</string>
+    <string name="camera_filter_sketch">素描</string>
+
 </resources>
