Feature: add filter of white balance

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -113,7 +113,8 @@
     <string name="filter_sharpening">sharpen</string>
 
     <string name="camera_filter_none">None</string>
-    <string name="camera_filter_crayon">Crayon</string>
+    <string name="camera_filter_hue">Hue</string>
+    <string name="camera_filter_balance">White balance</string>
     <string name="camera_filter_sketch">Sketch</string>
 
 </resources>
