--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,8 @@
     <string name="filter_sharpening">锐化</string>
 
     <string name="camera_filter_none">正常</string>
-    <string name="camera_filter_crayon">蜡笔</string>
+    <string name="camera_filter_hue">Hue</string>
+    <string name="camera_filter_balance">白平衡</string>
     <string name="camera_filter_sketch">素描</string>
 
 </resources>
