Feature: add filter of blur

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -116,5 +116,6 @@
     <string name="camera_filter_hue">Hue</string>
     <string name="camera_filter_balance">White balance</string>
     <string name="camera_filter_sketch">Sketch</string>
+    <string name="camera_filter_blur">Blur</string>
 
 </resources>
