Feature: add filter of color invert

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -117,5 +117,6 @@
     <string name="camera_filter_balance">White balance</string>
     <string name="camera_filter_sketch">Sketch</string>
     <string name="camera_filter_blur">Blur</string>
+    <string name="camera_filter_invert">Invert</string>
 
 </resources>
