add overlay filter

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -119,5 +119,6 @@
     <string name="camera_filter_sketch">Sketch</string>
     <string name="camera_filter_blur">Blur</string>
     <string name="camera_filter_invert">Invert</string>
+    <string name="camera_filter_overlay">Overlay</string>
 
 </resources>
