--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,5 +119,6 @@
     <string name="camera_filter_sketch">素描</string>
     <string name="camera_filter_blur">模糊</string>
     <string name="camera_filter_invert">反相</string>
+    <string name="camera_filter_overlay">Overlay</string>
 
 </resources>
